<resources>
    <string name="app_name">BonJob</string>
    <string name="sodexo">sodexo</string>
    <string-array name="array_full_part_time_job">
        <item>Full time</item>
        <item>Part time</item>
    </string-array>
    <string name="facebook_app_id">350749725385451</string>
    <string name="google_maps_key">AIzaSyAsbWkL1j-nsNlpAGPDfGo7QwtWB-B-bLc</string>
    <string name="message_change_setting">Modifier les paramètres.</string>
    <string name="message_feature_not_implemented">Cette fonctionnalité n\'est pas encore implémentée.</string>
    <string name="message_server_alert">Oops! Something went wrong, I cannot explain right now ;-), Try again later </string>
    <string name="message_signout">Êtes-vous sûr de vouloir vous déconnecter de l\'application BonJob sur cet appareil.</string>
    <string name="network_error_message">Veuillez vérifier la connectivité réseau.</string>
    <string name="message_location_permission_request">Nous devons avoir accès à votre emplacement afin de vous montrer des résultats précis.Veuillez aller aux paramètres de l\'application et autoriser la permission.</string>
    <string name="message_location_not_enable">Votre service de localisation est désactivé. Veuillez l\'activer afin de profiter de l\'ensemble de nos fonctionnalités.</string>
    <string name="message_logout">Déconnexion</string>
    <string name="googleplay_service_not_available">GooglePlay service is not available.</string>
    <string name="message_ok">D\'accord</string>
    <string name="message_goto_setting">Go to Settings</string>
    <string name="exit_from_app">Êtes-vous sûr de vouloir quitter l\'application?</string>
    <string name="find_job">Trouver un emploi</string>
    <string name="recruite_a_candidate">RECRUTER UN CANDIDAT</string>
    <string name="connection_via_facebook">Connexion via Facebook</string>
    <string name="registration">Inscription</string>
    <string name="login">Connexion</string>
    <string name="message_find_job_in_hotel_catering">Trouvez un emploi dans\n I\'hotellerie-restauration</string>
    <string name="findajob7">J\'ai lu et j\'accepte les</string>
    <string name="findajob8">conditions d\'utillisation</string>
    <string name="registration_connection">Connexion</string>
    <string name="registration_photo">+ PHOTO</string>
    <string name="registration_pitch_video">+ PITCH VIDEO</string>
    <string name="registration_first_name">Prénom</string>
    <string name="registration_name">Nom</string>
    <string name="registration_password">Mot de passe</string>
    <string name="registration_accept">J\'ai lu et j\'accepte les</string>
    <string name="registration_condition">conditions d\'utilisation</string>
    <string name="connection_email">Email</string>
    <string name="connection_password">Mot de passe</string>
    <string name="connection">Connexion</string>
    <string name="connection_forgot">Mot de passe oublié ?</string>
    <string name="tabbar_look">Chercher</string>
    <string name="tabbar_my_offer">Mes offres</string>
    <string name="tabbar_chat">chat</string>
    <string name="tabbar_active">Activité</string>
    <string name="tabbar_profile">Profil</string>
    <string name="secondviewfor_welcome">Bienvenue</string>
    <string name="secondviewfor_connect_recr">BonJob est un outil gratuit pour\n vous connecter avec les recruteurs</string>
    <string name="secondviewfor_optimize_chance">Pour optimiser vos chances </string>
    <string name="secondviewfor_add_one">Ajoutez \nune</string>
    <string name="secondviewfor_photo">Photo</string>
    <string name="secondviewfor_indicate">Indiquez \nvotre</string>
    <string name="secondviewfor_experience">Expérience</string>
    <string name="secondviewfor_reg_a">Enregistrez \nun</string>
    <string name="secondviewfor_pitch_video">Pitch Video</string>
    <string name="secondviewfor_edit_my_profile">Modifier mon profil</string>
    <string name="secondviewfor11">Chercher un emploi</string>
    <string name="secondviewfor_look_job">À la recherche d\'un emploi</string>
    <string name="profile_my">Mon profil</string>
    <string name="profilefirstcell11">Ludovic Nicoleau</string>
    <string name="profilefirstcell_Location">Localisation</string>
    <string name="profilefirstcell22">Saint-Lo , Normandie-0.0km</string>
    <string name="profilefirstcell_prof_exp">Expérience professionnelle</string>
    <string name="profilefirstcell_proj_man">Chef de projet</string>
    <string name="profilefirstcell33">Evenormandie</string>
    <string name="profilefirstcell34">Responsable de la mise en place de la foire gastronomique de Saint-Lo en charge du commerce et des relations avec les médias. </string>
    <string name="profilefirstcell_training">Formation</string>
    <string name="profilefirstcell_not_specified">Non précisé</string>
    <string name="profilefirstcell_language">Langues</string>
    <string name="profilefirstcell52">Anglais-Courant</string>
    <string name="profilefirstcell_about">A propos</string>
    <string name="profilefirstcell_looking_job">Je cherche un travail pour cuisiner</string>
    <string name="profilefirstcell_actual_status">Statut actuel</string>
    <string name="profilefirstcell_student">Étudiant</string>
    <string name="profilefirstcell_mobility">Mobilité</string>
    <string name="profilefirstcell_yes">Oui</string>
    <string name="profilefirstcell_edit_my_profile">Modifier mon profil</string>
    <string name="record">Enregistrer</string>
    <string name="profile_register">registre</string>
    <string name="profilesecondcell_first_name">PRÉNOM</string>
    <string name="profilesecondcell_name">NOM</string>
    <string name="profilesecondcell22">nicoleau</string>
    <string name="profilesecondcell_born">NÉ(E)LE</string>
    <string name="profilesecondcell_city">VILLE</string>
    <string name="Ville">Ville</string>
    <string name="profilesecondcell42">Saint-lo</string>
    <string name="profilesecondcell_photo">PHOTO</string>
    <string name="profilesecondcell_pitch_video">PITCH VIDEO</string>
    <string name="profilesecondcell_experince">EXPÉRIENCE</string>
    <string name="profilesecondcell_lev_edu">NIVEAU DE FORMATION</string>
    <string name="job_sought">Emploi recherché</string>
    <string name="profilesecondcell_to_select">Pour sélectionner</string>
    <string name="profilesecondcell_spec_training">Spécifier votre formation</string>
    <string name="profilesecondcell_about">Sur</string>
    <string name="profilesecondcell_beginner">Débutant</string>
    <string name="profilesecondcell_intermediate">Intermédiaire</string>
    <string name="profilesecondcell_advance">Avancé</string>
    <string name="profilesecondcell_current">Courant</string>
    <string name="profilesecondcell_add">+ Ajouter</string>
    <string name="profilesecondcell_actual_status">Statut actuel</string>
    <string name="profilesecondcell_student_apprentice">Apprenti étudiant</string>
    <string name="profilesecondcell_appretice">Apprenti</string>
    <string name="profilesecondcell_activr">Actif</string>
    <string name="profilesecondcell_job_seeker">Demandeur d\'emploi</string>
    <string name="profilesecondcell_inactive">Inactif</string>
    <string name="profilesecondcell_mobility">Mobilité</string>
    <string name="profilesecondcell_no">Non</string>
    <string name="exp_return">Retour</string>
    <string name="all_jobs">Tous les emplois</string>
    <string name="exp_indicate">Indiquez votre experience</string>
    <string name="exp_without">Sans</string>
    <string name="exp_year1">&lt; 1 an</string>
    <string name="exp_year1_2">1&#8211;2 ans</string>
    <string name="exp_year3_4">3&#8211;4 ans</string>
    <string name="exp_year5">5 ans+</string>
    <string name="year">an</string>
    <string name="years">ans</string>
    <string name="years_plus">ans+</string>
    <string name="exp_pos_held">POSTE OCCUPE</string>
    <string name="exp_comp_name">NOM DE L\'ENTREPRISE</string>
    <string name="exp_desc">DESCRIPTION</string>
    <string name="activity_area">Secteur d\'activite</string>
    <string name="activity_kitchen_cat">Cuisine  &#8211; Restauration</string>
    <string name="activity_room_service">Salle &#8211; Service</string>
    <string name="activity_hotel_accom">Hôtellerie &#8211; Hébergement</string>
    <string name="pos_held_baker">Boulanger</string>
    <string name="pos_held_project_man">Charge(e) de projet evenem</string>
    <string name="pos_held_chef_coll_rest">Chef cuisinier (rest. collective)</string>
    <string name="pos_held_tl_coll_rest">Chef d\'equipe (rest. collective)</string>
    <string name="pos_held_tl_fast_rest">Chef d\'equipe (rest. rapide)</string>
    <string name="pos_held_chef">Chef de cuisine</string>
    <string name="pos_held_head_of_party">Chef de partie</string>
    <string name="remove">x Supprimer</string>
    <string name="remove2">Supprimer</string>
    <string name="gallery">Galerie</string>
    <string name="ed_photo">+ Photo</string>
    <string name="delete_photo">x Supprimer la photo</string>
    <string name="add_desc">Ajouter une description ?</string>
    <string name="external_storage_perm_mess">Veuillez accorder l\'autorisation d\'accéder à la Galerie.</string>
    <string name="camera_external">Veuillez accorder l\'autorisation d\'accéder à la caméra.</string>
    <string name="tranning_empty_message">S’il vous plaît sélectionnez votre formation.</string>
    <string name="username_empty_message">Le nom d\'utilisateur ne peut pas être vide.</string>
    <string name="password_empty_message">Le mot de passe ne peut pas être vide.</string>
    <string name="firstName_empty_message">Le prénom ne peut pas être vide.</string>
    <string name="name_empty_message">Le nom ne peut pas être vide.</string>
    <string name="enterprise_empty_message">Le nom de l\'entreprise ne peut pas être vide.</string>
    <string name="location_empty_message">L\'emplacement ne peut pas être vide.</string>
    <string name="email_empty_message">Le courrier électronique ne peut pas être vide.</string>
    <string name="email_invalid_message">Email invalide.</string>
    <string name="enter_mobile_number">Entrez le numéro de téléphone portable.</string>
    <string name="enter_code">Entrez le code.</string>
    <string name="invalid_url">Url invalide.</string>
    <string name="set_date">Régler la date</string>
    <string name="cancel">Annuler</string>
    <string name="internal_storage">internal_storage</string>
    <string name="declared">Sélectionner</string>
    <string name="password_length">La longueur du mot de passe doit être de 6 chiffres</string>
    <string name="francies">Français</string>
    <string name="anglais">Anglais</string>
    <string name="search">Rechercher</string>
    <string name="application_sent">Votre candidature est envoyée !</string>
    <string name="application_message">L\'entreprise dispose d\'un délai de 48 heures pour vous répondre avant que votre candidature n\'expire.</string>
    <string name="good_luck_message">Bonne chance et merci d\'utiliser</string>
    <string name="continue_my_search">Continuer ma recherche</string>
    <string name="goto_my_profile">Aller à mon profil</string>
    <string name="active">Actif il y a </string>
    <string name="chat">Chat</string>
    <string name="my_offers">Mes Offres</string>
    <string name="offer_publish">Votre offre a été publiée</string>
    <string name="candidate">Candidats</string>
    <string name="selected">Sélectionnés</string>
    <string name="hired">Embauchés</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel_subscription_msg">Êtes-vous certain de vouloir résilier votre abonnement ?</string>
    <string name="cancel_subscription_accessabilty">En annulant votre abonnement, vous n\'aurez plus accès aux services suivants : \nRecherche de candidats, dossier Mes offres, Chat, publication d\'offres d\'emploi. </string>
</resources>