<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/alerter_ic_face"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_gifts"
        android:icon="@drawable/alerter_ic_face"
        android:title="@string/offer_publish" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/alerter_ic_face"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/alerter_ic_face"
        android:title="@string/active" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/alerter_ic_face"
        android:title="@string/profile_my" />
</menu>