<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/dialog_ludovic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_half"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">


        <com.infoicon.bonjob.customview.CustomsTextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_double"
            android:layout_marginRight="@dimen/margin_double"
            android:layout_marginTop="@dimen/margin_25"
            android:gravity="left"
            android:lineSpacingExtra="@dimen/margin_half"
            android:padding="@dimen/default_margin"
            android:text="@string/cancel_subscription_msg"
            android:textColor="@color/pink_color"
            android:textSize="@dimen/margin_25"/>

        <com.infoicon.bonjob.customview.CustomsTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_marginTop="@dimen/margin_double"
            android:gravity="left"
            android:lineSpacingExtra="@dimen/margin_half"
            android:padding="@dimen/default_margin"
            android:text="@string/cancel_subscription_accessabilty"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_25"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.infoicon.bonjob.customview.CustomsButton
                android:id="@+id/btnConfirm"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:background="@drawable/round_button_pink"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_22"/>

            <com.infoicon.bonjob.customview.CustomsButton
                android:id="@+id/btnCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="1"
                android:background="@drawable/round_button_blue"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_22"/>

        </LinearLayout>


    </LinearLayout>



</RelativeLayout>