<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_60"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    android:contentInsetEnd="0dp"
    android:contentInsetLeft="0dp"
    android:contentInsetRight="0dp"
    android:contentInsetStart="0dp"
    android:elevation="@dimen/margin_1"
    app:contentInsetEnd="0dp"
    app:contentInsetLeft="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetStart="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.infoicon.bonjob.customview.CustomsTextView
            android:id="@+id/textViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawableLeft="@drawable/back_pink"
            android:drawablePadding="@dimen/default_margin"
            android:gravity="center"
            android:padding="@dimen/default_margin"
            android:text="@string/exp_return"
            android:textColor="@color/pink_color"
            android:textSize="@dimen/margin_25"/>

        <com.infoicon.bonjob.customview.CustomsTextViewBold
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewBack"
            android:layout_alignBottom="@+id/textViewBack"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="@dimen/default_margin"
            android:text="@string/secondviewfor_experience"
            android:textColor="@color/blue_color"
            android:textSize="@dimen/margin_25"
            />

        <com.infoicon.bonjob.customview.CustomsTextViewBold
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewBack"
            android:layout_alignBottom="@+id/textViewBack"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:padding="@dimen/default_margin"
            android:text="@string/record"
            android:textColor="@color/pink_color"
            android:textSize="@dimen/margin_25"
            />

    </RelativeLayout>
</android.support.v7.widget.Toolbar>